<resources>
    <string name="app_name">AgriTech</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AgriTech</string>
    <string name="nav_header_subtitle"></string>

    <string name="menu_tools">Tools</string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_aboutus">About Us</string>
    <string name="action_search">search</string>
    <string name="action_addItem">Add Item</string>
    <string name="nav_Profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_addItem">Add Item</string>
    <string name="nav_Pesticides">Pesticides</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_myItem">Uploaded Items</string>


    <string name="catagory_prompt">Choose a Category</string>
    <string name="menu_delivery">Delivery</string>

    <string-array name="catagory_arrays">
        <item>Pesticide</item>
        <item>Cropicide</item>
        <item>Farming Tool</item>
    </string-array>
    <string name="title_activity_about_us_map">Map</string>
    <string name="nav_chat">Chats</string>
</resources>
